codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__limits_placeholder.snap
---
source: tui/src/chatwidget/tests.rs
expression: visual
---
[magenta]/limits[/]

[bold]Usage Limits[/]
  Real usage data is not available yet.
[dim]  Send a message to Codex, then run /limits again.[/]
